[tool.poetry]
name = "demo-netflix"
version = "0.1.0"
description = "Demo Netflix Backend"
authors = ["murtazoxurramov <murtazoxurramov1@gmail.com>"]
license = "MIT Litcense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
piccolo = "^1.3.0"
piccolo-admin = "^1.2.0"
piccolo-api = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
